--- a/data/cards/05338223.yaml
+++ b/data/cards/05338223.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 强制进化
 text:
   en: |-
-    Tribute 1 "Evoltile" monster; Special Summon 1 "Evolsaur" monster from your Deck. It is treated as if it was Special Summoned by the effect of an "Evoltile" monster.
+    Tribute 1 "Evoltile" monster; Special Summon 1 "Evolsaur" monster from your Deck. (This is treated as a Special Summon by the effect of an "Evoltile" monster.)
   de: |-
     Biete 1 "Evoltil"-Monster als Tribut an; beschwöre 1 "Evolsaurier"-Monster als Spezialbeschwörung von deinem Deck. Es wird behandelt, als ob es durch den Effekt eines "Evoltil"Monsters als Spezialbeschwörung beschworen wurde.
   es: |-
@@ -46,21 +46,42 @@ sets:
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-EN024
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: ORCS-DE057
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-DE024
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: ORCS-FR057
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-FR024
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: ORCS-IT057
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-IT024
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
+  pt:
+  - set_number: OP22-PT024
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: ORCS-JP057
     set_name: Order of Chaos
