--- a/data/cards/19024706.yaml
+++ b/data/cards/19024706.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Activa esta carta sólo cuando un monstruo "HÉROE Elemental" que controles es destruido en batalla. Tu adversario selecciona 1 carta al azar de tu mano. Si esa carta es un monstruo "HÉROE Elemental", destruye 1 monstruo que controle tu adversario. Luego Invoca de Modo Especial la carta seleccionada.
   fr: |-
-    Activable uniquement lorsqu'un monstre "HÉROS Élémentaire" que vous contrôlez est détruit au combat. Votre adversaire sélectionne 1 carte de votre main au hasard. Si cette carte est un monstre "HÉROS Élémentaire", détruisez 1 monstre contrôlé par votre adversaire, puis Invoquez Spécialement la carte sélectionnée.
+    Lorsqu'un monstre "HÉROS Élémentaire" que vous contrôlez est détruit au combat : votre adversaire choisit 1 carte au hasard depuis votre main, puis si c’est un monstre "HÉROS Élémentaire", vous détruisez 1 monstre contrôlé par votre adversaire, et si vous le faites, Invoquez Spécialement le monstre choisi.
   it: |-
     Quando un mostro "EROE Elementale" che controlli viene distrutto in battaglia: il tuo avversario seleziona e rivela 1 carta a caso dalla tua mano, poi se essa è un mostro "EROE Elementale", distruggi 1 mostro controllato dal tuo avversario, poi Evoca Specialmente il mostro selezionato.
   pt: |-
