--- a/data/cards/23516703.yaml
+++ b/data/cards/23516703.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP22-EN027
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: LODT-DE079
     set_name: Light of Destruction
@@ -73,6 +77,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP22-DE027
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: LODT-FR079
     set_name: Light of Destruction
@@ -90,6 +98,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP22-FR027
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT079
     set_name: Light of Destruction
@@ -107,6 +119,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP22-IT027
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: DL17-PT018
     set_name: Duelist League 17 participation cards
@@ -120,6 +136,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP22-PT027
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: LODT-JP079
     set_name: Light of Destruction
