--- a/data/cards/32441317.yaml
+++ b/data/cards/32441317.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: OP22-EN023
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   - set_number: DT06-EN092
     set_name: Duel Terminal 6b
     rarities:
@@ -79,6 +83,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: OP22-DE023
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: TDGS-FR049
     set_name: The Duelist Genesis
@@ -96,6 +104,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: OP22-FR023
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: TDGS-IT049
     set_name: The Duelist Genesis
@@ -113,6 +125,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: OP22-IT023
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT136
     set_name: Legendary Collection 5D's Mega Pack
@@ -122,6 +138,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: OP22-PT023
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: TDGS-JP049
     set_name: The Duelist Genesis
