--- a/data/cards/44362883.yaml
+++ b/data/cards/44362883.yaml
@@ -48,7 +48,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Super Rare
-  - set_number: OP22-EN0??
+  - set_number: OP22-EN002
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
@@ -57,7 +57,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Super Rare
-  - set_number: OP22-DE0??
+  - set_number: OP22-DE002
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
@@ -66,7 +66,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Super Rare
-  - set_number: OP22-FR0??
+  - set_number: OP22-FR002
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
@@ -75,7 +75,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Super Rare
-  - set_number: OP22-IT0??
+  - set_number: OP22-IT002
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
@@ -84,7 +84,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Super Rare
-  - set_number: OP22-PT0??
+  - set_number: OP22-PT002
     set_name: OTS Tournament Pack 22
     rarities:
     - Ultimate Rare
