--- a/data/cards/47120245.yaml
+++ b/data/cards/47120245.yaml
@@ -15,8 +15,9 @@ name:
   zh-CN: 圣骑士 鲍斯
 text:
   en: |-
-    This card is treated as a Normal Monster while face-up on the field. While equipped with a "Noble Arms" Equip Spell Card, this card becomes an Effect Monster with these effects.
-    ● This card becomes DARK and its Level is increased by 1. During your Main Phase: You can reveal 3 "Noble Arms" cards from your Deck, have your opponent randomly add 1 of them to your hand, and send the rest to the Graveyard. You can only use this effect of "Noble Knight Borz" once per turn.
+    This card is treated as a Normal Monster while face-up on the field. While equipped with a "Noble Arms" Equip Spell, this card becomes an Effect Monster with these effects.
+    ● This card becomes DARK and its Level is increased by 1.
+    ● During your Main Phase: You can reveal 3 "Noble Arms" cards from your Deck, have your opponent randomly add 1 of them to your hand, and send the rest to the GY. You can only use this effect of "Noble Knight Borz" once per turn.
   de: |-
     Diese Karte wird als ein Normales Monster behandelt, solange sie offen auf dem Spielfeld liegt. Solange diese Karte mit einer „Edle Waffen“-Ausrüstungszauberkarte ausgerüstet ist, wird sie ein Effektmonster mit diesen Effekten.
     ● Diese Karte wird FINSTERNIS und ihre Stufe wird um 1 erhöht. Während deiner Main Phase: Du kannst 3 „Edle Waffen“-Karten von deinem Deck vorzeigen, deinen Gegner zufällig 1 von ihnen deiner Hand hinzufügen lassen und die restlichen auf den Friedhof legen. Du kannst diesen Effekt von „Edler Ritter Borz“ nur einmal pro Spielzug verwenden.
@@ -64,6 +65,10 @@ sets:
     set_name: Noble Knights of the Round Table Box Set
     rarities:
     - Platinum Rare
+  - set_number: OP22-EN016
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: SHSP-DE085
     set_name: Shadow Specters
@@ -73,6 +78,10 @@ sets:
     set_name: Noble Knights of the Round Table Box Set
     rarities:
     - Platinum Rare
+  - set_number: OP22-DE016
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: SHSP-FR085
     set_name: Shadow Specters
@@ -82,6 +91,10 @@ sets:
     set_name: Noble Knights of the Round Table Box Set
     rarities:
     - Platinum Rare
+  - set_number: OP22-FR016
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: SHSP-IT085
     set_name: Shadow Specters
@@ -91,6 +104,10 @@ sets:
     set_name: Noble Knights of the Round Table Box Set
     rarities:
     - Platinum Rare
+  - set_number: OP22-IT016
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: SHSP-PT085
     set_name: Shadow Specters
@@ -100,6 +117,10 @@ sets:
     set_name: Noble Knights of the Round Table Box Set
     rarities:
     - Platinum Rare
+  - set_number: OP22-PT016
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: EP14-JP016
     set_name: 'Extra Pack: Knights of Order'
