--- a/data/cards/57624336.yaml
+++ b/data/cards/57624336.yaml
@@ -42,7 +42,7 @@ def: 1000
 pendulum_scale: 7
 pendulum_effect:
   en: |-
-    You can target 1 other Spell/Trap Card on the field; destroy both it and this card. You can only use this effect of "Archfiend Eccentrick" once per turn.
+    You can target 1 other Spell/Trap on the field; destroy both it and this card. You can only use this effect of "Archfiend Eccentrick" once per turn.
   de: |-
     Du kannst 1 andere Zauber-/Fallenkarte auf dem Spielfeld wählen; zerstöre sowohl sie als auch diese Karte. Du kannst diesen Effekt von „Erzunterweltler Exzentrick“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -64,7 +64,7 @@ series:
 - Archfiend
 images:
 - index: 1
-  image: ArchfiendEccentrick-PEVO-EN-SR-1E.png
+  image: ArchfiendEccentrick-OP22-EN-C-UE.png
 sets:
   en:
   - set_number: CORE-EN042
@@ -83,6 +83,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: OP22-EN017
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: CORE-DE042
     set_name: Clash of Rebellions
@@ -100,6 +104,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: OP22-DE017
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: CORE-FR042
     set_name: Clash of Rebellions
@@ -117,6 +125,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: OP22-FR017
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: CORE-IT042
     set_name: Clash of Rebellions
@@ -134,6 +146,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: OP22-IT017
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: CORE-PT042
     set_name: Clash of Rebellions
@@ -151,6 +167,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: OP22-PT017
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: CORE-JP042
     set_name: Clash of Rebellions
