--- a/data/cards/68084557.yaml
+++ b/data/cards/68084557.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 机械龙 动力工具
 text:
   en: |-
-    1 Tuner + 1 or more non-Tuner monsters
-    During your turn, when an Equip Spell Card(s) is equipped to this card: You can draw 1 card. You can only use this effect of "Power Tool Mecha Dragon" once per turn. Once per turn, during either player's turn: You can target 1 appropriate face-up Equip Card on the field; equip that target to this card.
+    1 Tuner + 1+ non-Tuner monsters
+    During your turn, when an Equip Spell(s) becomes equipped to this card: You can draw 1 card. You can only use this effect of "Power Tool Mecha Dragon" once per turn. Once per turn (Quick Effect): You can target 1 appropriate face-up Equip Card on the field; equip that target to this card.
   de: |-
     1 Empfänger- + 1 oder mehr Nicht-Empfänger-Monster
     Während deines Spielzugs, wenn diese Karte mit Ausrüstungszauberkarten ausgerüstet wird: Du kannst 1 Karte ziehen. Du kannst diesen Effekt von „Werkzeug-Mecha-Drache“ nur einmal pro Spielzug verwenden. Einmal pro Spielzug, während des Spielzugs eines beliebigen Spielers: Du kannst 1 geeignete offene Ausrüstungskarte auf dem Spielfeld wählen; rüste diese Karte mit dem gewählten Ziel aus.
@@ -53,33 +53,53 @@ series:
 - Power Tool
 images:
 - index: 1
-  image: PowerToolMechaDragon-PGLD-EN-GScR-1E.png
+  image: PowerToolMechaDragon-OP22-EN-C-UE.png
 sets:
   en:
   - set_number: PGLD-EN005
     set_name: Premium Gold
     rarities:
     - Gold Secret Rare
+  - set_number: OP22-EN018
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: PGLD-DE005
     set_name: Premium Gold
     rarities:
     - Gold Secret Rare
+  - set_number: OP22-DE018
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: PGLD-FR005
     set_name: Premium Gold
     rarities:
     - Gold Secret Rare
+  - set_number: OP22-FR018
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: PGLD-IT005
     set_name: Premium Gold
     rarities:
     - Gold Secret Rare
+  - set_number: OP22-IT018
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: PGLD-PT005
     set_name: Premium Gold
     rarities:
     - Gold Secret Rare
+  - set_number: OP22-PT018
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: PP15-JP005
     set_name: Premium Pack 15
