--- a/data/cards/88095331.yaml
+++ b/data/cards/88095331.yaml
@@ -50,21 +50,42 @@ sets:
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-EN015
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: ORCS-DE083
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-DE015
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: ORCS-FR083
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-FR015
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: ORCS-IT083
     set_name: Order of Chaos
     rarities:
     - Super Rare
+  - set_number: OP22-IT015
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
+  pt:
+  - set_number: OP22-PT015
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: EP12-JP034
     set_name: Extra Pack 2012
