--- a/data/cards/92729410.yaml
+++ b/data/cards/92729410.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 子狸 嘭嘭
 text:
   en: |-
-    When this card is Normal Summoned: You can Special Summon 1 Level 2 Beast-Type monster from your Deck in face-down Defense Position, except "Baby Raccoon Ponpoko". You cannot Special Summon any monsters during the turn you activate this effect, except Beast-Type monsters.
+    When this card is Normal Summoned: You can Special Summon 1 Level 2 Beast monster from your Deck in face-down Defense Position, except "Baby Raccoon Ponpoko". You cannot Special Summon monsters the turn you activate this effect, except Beast monsters.
   de: |-
     Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 Monster vom Typ Ungeheuer der Stufe 2 als Spezialbeschwörung von deinem Deck in die verdeckte Verteidigungsposition beschwören, außer „Waschbärbaby Ponpoko“. Du kannst während des Spielzugs, in dem du diesen Effekt aktivierst, keine Monster als Spezialbeschwörung beschwören, außer Monstern vom Typ Ungeheuer.
   es: |-
@@ -41,7 +41,7 @@ atk: 800
 def: 0
 images:
 - index: 1
-  image: BabyRaccoonPonpoko-MP14-EN-C-1E.png
+  image: BabyRaccoonPonpoko-OP22-EN-SR-UE.png
 sets:
   en:
   - set_number: SHSP-EN014
@@ -52,6 +52,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP22-EN005
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: SHSP-DE014
     set_name: Shadow Specters
@@ -61,6 +65,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP22-DE005
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: SHSP-FR014
     set_name: Shadow Specters
@@ -70,6 +78,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP22-FR005
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: SHSP-IT014
     set_name: Shadow Specters
@@ -79,6 +91,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP22-IT005
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: SHSP-PT014
     set_name: Shadow Specters
@@ -88,6 +104,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP22-PT005
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: SHSP-JP014
     set_name: Shadow Specters
