--- a/data/cards/00897409.yaml
+++ b/data/cards/00897409.yaml
@@ -72,26 +72,46 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Common
+  - set_number: OP22-EN012
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE051
     set_name: Photon Hypernova
     rarities:
     - Common
+  - set_number: OP22-DE012
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR051
     set_name: Photon Hypernova
     rarities:
     - Common
+  - set_number: OP22-FR012
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT051
     set_name: Photon Hypernova
     rarities:
     - Common
+  - set_number: OP22-IT012
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT051
     set_name: Photon Hypernova
     rarities:
     - Common
+  - set_number: OP22-PT012
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: PHHY-JP051
     set_name: Photon Hypernova
