--- a/data/cards/18973184.yaml
+++ b/data/cards/18973184.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: OP22-EN009
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: SDAZ-DE020
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: OP22-DE009
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: SDAZ-FR020
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: OP22-FR009
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: SDAZ-IT020
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: OP22-IT009
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: SDAZ-PT020
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: OP22-PT009
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: SD43-JP020
     set_name: 'Structure Deck: Alba Strike'
