--- a/data/cards/21570001.yaml
+++ b/data/cards/21570001.yaml
@@ -44,26 +44,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: OP22-EN008
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: BACH-DE062
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: OP22-DE008
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: BACH-FR062
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: OP22-FR008
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: BACH-IT062
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: OP22-IT008
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: BACH-PT062
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: OP22-PT008
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: BACH-JP062
     set_name: Battle of Chaos
