--- a/data/cards/29479265.yaml
+++ b/data/cards/29479265.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 破械双王神 来迎
 text:
   en: |-
-    2+ monsters including a Link Monster
+    2+ monsters, including a Link Monster
     If a card(s) on the field is destroyed by card effect, except by "Unchained Abomination" (except during the Damage Step): You can target 1 card on the field; destroy it. When another monster is destroyed by battle: You can target 1 card on the field; destroy it. During the End Phase: You can target 1 card on the field; destroy it. You can only use each effect of "Unchained Abomination" once per turn.
   de: |-
     2+ Monster, darunter ein Linkmonster
@@ -51,12 +51,12 @@ link_arrows:
 - ↘
 - ⬆
 atk: 3000
-materials: 2+ monsters including a Link Monster
+materials: 2+ monsters, including a Link Monster
 series:
 - Unchained
 images:
 - index: 1
-  image: UnchainedAbomination-MP20-EN-PScR-1E.png
+  image: UnchainedAbomination-OP22-EN-SR-UE.png
 sets:
   en:
   - set_number: CHIM-EN045
@@ -67,6 +67,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP22-EN006
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: CHIM-DE045
     set_name: Chaos Impact
@@ -76,6 +80,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP22-DE006
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: CHIM-FR045
     set_name: Chaos Impact
@@ -85,6 +93,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP22-FR006
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: CHIM-IT045
     set_name: Chaos Impact
@@ -94,6 +106,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP22-IT006
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: CHIM-PT045
     set_name: Chaos Impact
@@ -103,6 +119,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: OP22-PT006
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: CHIM-JP045
     set_name: Chaos Impact
