--- a/data/cards/35269904.yaml
+++ b/data/cards/35269904.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+  - set_number: OP22-EN003
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: PHHY-DE069
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+  - set_number: OP22-DE003
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: PHHY-FR069
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+  - set_number: OP22-FR003
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: PHHY-IT069
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+  - set_number: OP22-IT003
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: PHHY-PT069
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+  - set_number: OP22-PT003
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: PHHY-JP069
     set_name: Photon Hypernova
