--- a/data/cards/55428811.yaml
+++ b/data/cards/55428811.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Selecciona 5 cartas "HÉROE Elemental" de tu Cementerio, ponlas en tu Deck y barájalo. Luego roba 2 cartas. Si no tenías otras cartas en tu Campo ni en tu mano cuando activaste esta carta, roba 3 cartas en vez de 2.
   fr: |-
-    Sélectionnez 5 cartes "Héros Élémentaire" depuis votre Cimetière et mélangez-les dans votre Deck. Puis piochez 2 cartes. Piochez 3 cartes à la place si aucune carte n'est sur votre Terrain ni dans votre main lorsque vous activez cette carte.
+    Ciblez 5 cartes "HÉROS Élémentaire" dans votre Cimetière ; mélangez-les dans le Deck, puis piochez 2 cartes, ou piochez 3 cartes à la place si vous n’avez aucune autre carte sur votre Terrain et dans votre main lorsque vous avez activé cette carte.
   it: |-
     Scegli come bersaglio 5 carte "EROE Elementale" nel tuo Cimitero; mischiale nel Deck, poi pesca 2 carte (pesca invece 3 carte se non avevi altre carte sul tuo Terreno e in mano quando hai attivato questa carta).
   pt: |-
