--- a/data/cards/55749927.yaml
+++ b/data/cards/55749927.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: OP22-EN013
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: ROTD-DE072
     set_name: Rise of the Duelist
@@ -82,6 +86,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: OP22-DE013
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: ROTD-FR072
     set_name: Rise of the Duelist
@@ -91,6 +99,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: OP22-FR013
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: ROTD-IT072
     set_name: Rise of the Duelist
@@ -100,6 +112,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: OP22-IT013
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: ROTD-PT072
     set_name: Rise of the Duelist
@@ -109,6 +125,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: OP22-PT013
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: ROTD-JP072
     set_name: Rise of the Duelist
