--- a/data/cards/66712905.yaml
+++ b/data/cards/66712905.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: OP22-EN010
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: TAMA-DE032
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: OP22-DE010
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: TAMA-FR032
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: OP22-FR010
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: TAMA-IT032
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: OP22-IT010
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: TAMA-PT032
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: OP22-PT010
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBTM-JP032
     set_name: 'Deck Build Pack: Tactical Masters'
