--- a/data/cards/77656797.yaml
+++ b/data/cards/77656797.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP22-EN019
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: ROTD-DE042
     set_name: Rise of the Duelist
@@ -74,6 +78,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP22-DE019
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: ROTD-FR042
     set_name: Rise of the Duelist
@@ -83,6 +91,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP22-FR019
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: ROTD-IT042
     set_name: Rise of the Duelist
@@ -92,6 +104,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP22-IT019
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: ROTD-PT042
     set_name: Rise of the Duelist
@@ -101,6 +117,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP22-PT019
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: ROTD-JP042
     set_name: Rise of the Duelist
