--- a/data/cards/79933029.yaml
+++ b/data/cards/79933029.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP22-EN001
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: CYAC-DE018
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP22-DE001
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: CYAC-FR018
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP22-FR001
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: CYAC-IT018
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP22-IT001
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: CYAC-PT018
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP22-PT001
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: CYAC-JP018
     set_name: Cyberstorm Access
