--- a/data/cards/82105704.yaml
+++ b/data/cards/82105704.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP22-EN011
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: AMDE-DE021
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP22-DE011
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: AMDE-FR021
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP22-FR011
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: AMDE-IT021
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP22-IT011
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: AMDE-PT021
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP22-PT011
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP021
     set_name: 'Deck Build Pack: Amazing Defenders'
