--- a/data/cards/88686573.yaml
+++ b/data/cards/88686573.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP22-EN004
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: ABYR-DE031
     set_name: Abyss Rising
@@ -64,6 +68,10 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP22-DE004
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: ABYR-FR031
     set_name: Abyss Rising
@@ -73,6 +81,10 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP22-FR004
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: ABYR-IT031
     set_name: Abyss Rising
@@ -82,11 +94,19 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP22-IT004
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   pt:
   - set_number: MAZE-PT042
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP22-PT004
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: ABYR-JP031
     set_name: Abyss Rising
