--- a/data/cards/88760522.yaml
+++ b/data/cards/88760522.yaml
@@ -46,21 +46,42 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Rare
+  - set_number: OP22-EN007
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   de:
   - set_number: GAOV-DE058
     set_name: Galactic Overlord
     rarities:
     - Rare
+  - set_number: OP22-DE007
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   fr:
   - set_number: GAOV-FR058
     set_name: Galactic Overlord
     rarities:
     - Rare
+  - set_number: OP22-FR007
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   it:
   - set_number: GAOV-IT058
     set_name: Galactic Overlord
     rarities:
     - Rare
+  - set_number: OP22-IT007
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: OP22-PT007
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Super Rare
   ja:
   - set_number: GAOV-JP058
     set_name: Galactic Overlord
