--- a/data/cards/94016752.yaml
+++ b/data/cards/94016752.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP22-EN025
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE063
     set_name: Soul Fusion
@@ -57,6 +61,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP22-DE025
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: SOFU-FR063
     set_name: Soul Fusion
@@ -66,6 +74,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP22-FR025
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT063
     set_name: Soul Fusion
@@ -75,6 +87,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP22-IT025
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT063
     set_name: Soul Fusion
@@ -84,6 +100,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP22-PT025
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   ja:
   - set_number: SOFU-JP063
     set_name: Soul Fusion
