--- a/rush.yaml
+++ b/rush.yaml
@@ -112021,7 +112021,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７以上／風属性）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -112033,7 +112034,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。自分フィールドに表側表示の「ハンディーレディ」がいる場合、さらに手札のモンスター１体を自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
