--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -22,6 +22,10 @@
 - yugipedia: 371832
   fake_password: 10000090
 ## Prereleases
+# Duelist Nexus
+- set_abbreviation: DUNE
+  fake_password_range:
+    - 101201000
 # Age of Overlord
 - set_abbreviation: AGOV
   fake_password_range:
