--- a/data/cards/48381268.yaml
+++ b/data/cards/48381268.yaml
@@ -6,7 +6,7 @@ name:
   es: Boarden Morfotrónico
   fr: Planchon Morphtronique
   it: Skateboard Morfotronico
-  pt:
+  pt: Pranchen Morfotrônica
   ja: <ruby>Ｄ<rt>ディフォーマー</rt></ruby>・ボードン
   ja_romaji: Difōmā Bōdon
   ko: <ruby>D<rt>디포머</rt></ruby>·보든
@@ -30,8 +30,8 @@ text:
     ● Fino a quando è in Posizione di Attacco: I mostri "Morfotronici" checontrolli possono attaccare il tuo avversario direttamente.
     ● Fino a quando è in Posizione di Difesa: Gli altri mostri "Morfotronici" che controlli non possono essere distrutti in battaglia.
   pt: |-
-    ● Enquanto estiver na Posição de Ataque: Todos os monstros "Morphtronic" que você controla podem atacar o seu oponente diretamente.
-    ● Enquanto estiver na Posição de Defesa: Todos os outros monstros "Morphtronic" virados para cima que você controla não podem ser destruídos em batalha.
+    ● Posição de Ataque: Monstros "Morfotrônico(a)" que você controla podem atacar diretamente.
+    ● Posição de Defesa: Outros monstros "Morfotrônico(a)" que você controla não podem ser destruídos em batalha.
   ja: |-
     ①：このカードは表示形式によって以下の効果を得る。●攻撃表示：このカードがモンスターゾーンに存在する限り、自分の「Ｄ」モンスターは直接攻撃できる。●守備表示：このカードがモンスターゾーンに存在する限り、このカード以外の自分の「Ｄ」モンスターは戦闘では破壊されない。
   ko: |-
@@ -73,6 +73,11 @@ sets:
   it:
   - set_number: CRMS-IT017
     set_name: Crimson Crisis
+    rarities:
+    - Common
+  pt:
+  - set_number: OP22-PT030
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   ja:
