--- a/data/cards/31181711.yaml
+++ b/data/cards/31181711.yaml
@@ -25,7 +25,8 @@ text:
   it: |-
     Puoi scegliere come bersaglio 1 mostro "Samurai Superpesante" che controlli; equipaggia questo mostro dalla tua mano o dal tuo Terreno a quel bersaglio. Esso guadagna 1200 DEF. Quando il mostro equipaggiato con questa carta da questo effetto viene scelto come bersaglio per un attacco: puoi mandare questa Carta Equipaggiamento al Cimitero; annulla quell'attacco, ma il DEF del mostro equipaggiato diventa 0.
   pt: |-
-    Você pode escolher 1 monstro "Samurai Superpesado" que você controla; equipe este monstro, da sua mão ou do seu lado do campo, ao alvo. Ele ganha 1200 de DEF. Quando o monstro equipado com este card por este efeito for escolhido como alvo de um ataque: você pode enviar este Card de Equipamento para o Cemitério; negue o ataque, mas a DEF do monstro equipado se torna 0.
+    (Este card deve ser sempre considerado como um card "Samurai Superpesado Alma".)
+    Você pode escolher 1 monstro "Samurai Superpesado" que você controla; equipe este monstro da sua mão ou do campo ao alvo. Ele ganha 1200 de DEF. Quando o monstro equipado com este card por este efeito for escolhido como alvo de um ataque: você pode enviar este Card de Equipamento para o Cemitério; negue o ataque, mas a DEF do monstro equipado se torna 0.
   ja: |-
     ①：自分メインフェイズに自分フィールドの「超重武者」モンスター１体を対象として発動できる。自分の手札・フィールドからこのモンスターを守備力１２００アップの装備カード扱いとしてその自分のモンスターに装備する。②：このカードの効果でこのカードを装備したモンスターが攻撃対象に選択された時、装備されているこのカードを墓地へ送って発動できる。その攻撃を無効にし、装備モンスターの守備力を０にする。
   ko: |-
@@ -90,6 +91,10 @@ sets:
     - Common
   - set_number: MP15-PT135
     set_name: 2015 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP22-PT031
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   ja:
