--- a/data/cards/90361010.yaml
+++ b/data/cards/90361010.yaml
@@ -25,7 +25,8 @@ text:
   it: |-
     Puoi scegliere come bersaglio 1 mostro "Samurai Superpesante"che controlli; equippaggia questo mostro dalla tua mano o dal tuo Terreno a quel bersaglio. Se esso attacca un mostro in Posizione di Difesa, infliggi danno da combattimento perforante al tuo avversario. Se questa carta viene mandata dal Terreno al Cimitero: puoi aggiungere 1 mostro "Samurai Superpesante" dal tuo Deck alla tua mano, eccetto "Samurai Superpesante Animaperfora".
   pt: |-
-    Você pode escolher 1 monstro "Samurai Superpesado" que você controla; equipe este monstro da sua mão ou do seu lado do campo ao alvo. Se ele atacar um monstro em Posição de Defesa, cause dano de batalha perfurante ao seu oponente. Se este card for enviado do campo para o Cemitério: você pode adicionar 1 monstro "Samurai Superpesado" do seu Deck para a sua mão, exceto "Samurai Superpesado Perfurador de Almas".
+    (Este card deve ser sempre considerado como um card "Samurai Superpesado Alma".)
+    Você pode escolher 1 monstro "Samurai Superpesado" que você controla; equipe este monstro da sua mão ou do campo ao alvo. Se ele atacar um monstro em Posição de Defesa, cause dano de batalha perfurante ao seu oponente. Se este card for enviado do campo para o Cemitério: você pode adicionar 1 monstro "Samurai Superpesado" do seu Deck à sua mão, exceto "Samurai Superpesado Perfurador de Almas".
   ja: |-
     ①：自分メインフェイズに自分フィールドの「超重武者」モンスター１体を対象として発動できる。自分の手札・フィールドからこのモンスターを装備カード扱いとしてその自分のモンスターに装備する。②：このカードの効果でこのカードを装備したモンスターが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。③：このカードがフィールドから墓地へ送られた場合に発動できる。デッキから「超重武者装留イワトオシ」以外の「超重武者」モンスター１体を手札に加える。
   ko: |-
@@ -89,6 +90,10 @@ sets:
     - Common
   - set_number: MP15-PT199
     set_name: 2015 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP22-PT034
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   ja:
