--- a/data/cards/08165596.yaml
+++ b/data/cards/08165596.yaml
@@ -74,26 +74,41 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: ????-EN???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   de:
   - set_number: BLRR-DE033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: ????-DE???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   fr:
   - set_number: BLRR-FR033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: ????-FR???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   it:
   - set_number: BLRR-IT033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: ????-IT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   pt:
   - set_number: BLRR-PT033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: ????-PT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   ja:
   - set_number: CP18-JP033
     set_name: Collectors Pack 2018
