--- a/data/cards/17092736.yaml
+++ b/data/cards/17092736.yaml
@@ -8,7 +8,7 @@ name:
   it: Antico Telescopio
   pt: Telescópio Antigo
   ja: <ruby>古<rt>こ</rt></ruby><ruby>代<rt>だい</rt></ruby>の<ruby>遠<rt>とお</rt></ruby><ruby>眼<rt>め</rt></ruby><ruby>鏡<rt>がね</rt></ruby>
-  ja_romaji: Kodai no To'omegane
+  ja_romaji: Kodai no Toomegane
   ko: 고대의 망원경
   ko_rr:
   zh-TW:
