--- a/data/cards/04538826.yaml
+++ b/data/cards/04538826.yaml
@@ -81,26 +81,41 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: ????-EN???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   de:
   - set_number: BLAR-DE051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: ????-DE???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   fr:
   - set_number: BLAR-FR051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: ????-FR???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   it:
   - set_number: BLAR-IT051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: ????-IT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   pt:
   - set_number: BLAR-PT051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: ????-PT???
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
   ja:
   - set_number: VP18-JP004
     set_name: 20th Anniversary Legendary Dragons
