--- a/data/cards/63012333.yaml
+++ b/data/cards/63012333.yaml
@@ -8,7 +8,7 @@ name:
   it: Torre d'Ossa Assorbi-Anima
   pt: Torre de Ossos que Absorve Almas
   ja: <ruby>精<rt>せい</rt></ruby><ruby>気<rt>き</rt></ruby>を<ruby>吸<rt>す</rt></ruby>う<ruby>骨の塔<rt>ボーンタワー</rt></ruby>
-  ja_romaji: Seiki wo Sū Bōn Tawā
+  ja_romaji: Seiki o Suu Bōn Tawā
   ko: 정기를 흡수하는 골탑
   ko_rr:
   zh-TW:
