--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -114,6 +114,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.3
     rarities:
     - Super Rare
+  - set_number: 23TP-JP301
+    set_name: Top Prize Pack 2023 Vol.3
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: LTGY-KR050
     set_name: Lord of the Tachyon Galaxy
