--- a/data/cards/46947713.yaml
+++ b/data/cards/46947713.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.3
     rarities:
     - Super Rare
+  - set_number: 23TP-JP302
+    set_name: Top Prize Pack 2023 Vol.3
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: ST18-KR041
     set_name: Starter Deck 2018
