--- a/data/cards/95973569.yaml
+++ b/data/cards/95973569.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner Synchro Monster + 2+ non-Tuner Synchro Monsters
-    Must be Synchro Summoned. (Quick Effect): You can target 1 monster on the field Special Summoned from the Extra Deck; banish it. This effect can be used a number of times per turn up to the number of non-Tuner Synchro Monsters used as Synchro Material for this card. Once per turn, if a monster(s) is banished face-up: You can target 1 of them; Special Summon it to your field, ignoring its Summoning conditions.
+    Must be Synchro Summoned. (Quick Effect): You can target 1 monster on the field Special Summoned from the Extra Deck; banish it. This effect can be used a number of times per turn up to the number of non-Tuner Synchro Monsters used as Synchro Material for this card. Once per turn, if a monster(s) is banished face-up (except during the Damage Step): You can target 1 of them; Special Summon it to your field, ignoring its Summoning conditions.
   de:
   es:
   fr:
