--- a/data/cards/yugipedia978656.yaml
+++ b/data/cards/yugipedia978656.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If "Visas Starfrost" is on the field: Target 1 Effect Monster on the field; shuffle that target into the Deck, and if you do, during the End Phase of this turn, its owner can add 1 monster from their Deck to their hand with a different Type and a lower Level than the shuffled monster's Level/Rank/Link Rating. If a "Veda" monster(s) is Special Summoned while this card is in your GY: You can add this card to your hand. You can only use each effect of "Sarv Sarga" once per turn.
+    If "Visas Starfrost" is on the field: Target 1 Effect Monster on the field; shuffle that target into the Deck, and if you do, during the End Phase of this turn, its owner can add 1 monster from their Deck to their hand with a different Type and a lower Level than the shuffled monster's Level/Rank/Link Rating. If a "Veda" monster(s) is Special Summoned while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Sarv Sarga" once per turn.
   de:
   es:
   fr:
