--- a/data/cards/yugipedia992331.yaml
+++ b/data/cards/yugipedia992331.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can place 1 "Snake-Eye" monster from your hand, Deck, or GY face-up in its owner's Spell & Trap Zone as a Continuous Spell. Level 1 FIRE monsters you control gain 1100 ATK. Once per turn, if your opponent Normal or Special Summons a monster(s): You can target 1 Monster Card on the field treated as a Continuous Spell; Special Summon it to your field. You can only activate 1 "The Shrine of Serpentine Sight - Snake-Eye" per turn.
+    When this card is activated: You can place 1 "Snake-Eye" monster from your hand, Deck, or GY face-up in its owner's Spell & Trap Zone as a Continuous Spell. Level 1 FIRE monsters you control gain 1100 ATK. Once per turn, if your opponent Normal or Special Summons a monster(s) (except during the Damage Step): You can target 1 Monster Card on the field treated as a Continuous Spell; Special Summon it to your field. You can only activate 1 "The Shrine of Serpentine Sight - Snake-Eye" per turn.
   de:
   es:
   fr:
