--- a/data/cards/11335209.yaml
+++ b/data/cards/11335209.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Duamutef, Blessing of Horus" once per turn this way. Gains 1200 ATK/DEF for each "Horus" monster you control. If another card(s) you control leaves the field by an opponent's card effect while you control this monster: You can draw cards equal to the number of monsters with different names in your Main Monster Zone. You can only use this effect of "Duamutef, Blessing of Horus" once per turn.
+    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Duamutef, Blessing of Horus" once per turn this way. Gains 1200 ATK/DEF for each "Horus" monster you control. If another card(s) you control leaves the field by an opponent's card effect while you control this monster (except during the Damage Step): You can draw cards equal to the number of monsters with different names in your Main Monster Zone. You can only use this effect of "Duamutef, Blessing of Horus" once per turn.
   de:
   es:
   fr:
