--- a/data/cards/24094653.yaml
+++ b/data/cards/24094653.yaml
@@ -800,6 +800,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.2
     rarities:
     - Super Rare
+  - set_number: 23TP-JP202
+    set_name: Top Prize Pack 2023 Vol.2
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: LOB-K059
     set_name: Legend of Blue Eyes White Dragon
