--- a/data/cards/40785230.yaml
+++ b/data/cards/40785230.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned by its own Pendulum Effect. You can only Special Summon "Veda Upanishad(s)" once per turn. Once per turn, if your opponent Special Summons a monster(s) from the Extra Deck: You can banish 12 cards from your hand, field, and/or GY, face-down; it becomes the End Phase of this turn. Once per turn, during your Standby Phase: Return this card to the hand, then you can Special Summon 1 of your "Veda" monsters that is banished or in your hand, Deck, or GY.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by its own Pendulum Effect. You can only Special Summon "Veda Upanishad(s)" once per turn. Once per turn, if your opponent Special Summons a monster(s) from the Extra Deck (except during the Damage Step): You can banish 12 cards from your hand, field, and/or GY, face-down; it becomes the End Phase of this turn. Once per turn, during your Standby Phase: Return this card to the hand, then you can Special Summon 1 of your "Veda" monsters that is banished or in your hand, Deck, or GY.
   de:
   es:
   fr:
