--- a/data/cards/41908872.yaml
+++ b/data/cards/41908872.yaml
@@ -35,7 +35,7 @@ def: 1800
 pendulum_scale: 8
 pendulum_effect:
   en: |-
-    If a monster(s) is Special Summoned, and you control "Supreme King Z-ARC" and another Pendulum Monster: You can Special Summon this card, then you can choose 1 other Pendulum Monster you control, and the Attribute and Level of that monster or this card become the Attribute and Level of the other. You can only use this effect of "Supreme King Dragon Lightwurm" once per turn.
+    If a monster(s) is Special Summoned, and you control "Supreme King Z-ARC" and another Pendulum Monster (except during the Damage Step): You can Special Summon this card, then you can choose 1 other Pendulum Monster you control, and the Attribute and Level of that monster or this card become the Attribute and Level of the other. You can only use this effect of "Supreme King Dragon Lightwurm" once per turn.
   de:
   es:
   fr:
