--- a/data/cards/46518210.yaml
+++ b/data/cards/46518210.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a monster(s) is sent from the hand and/or Deck to the GY while this card is in your GY: You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Neferabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Neferabyss, the Ogdoadic Overlord" once per turn.
+    If a monster(s) is sent from the hand and/or Deck to the GY while this card is in your GY (except during the Damage Step): You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Neferabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Neferabyss, the Ogdoadic Overlord" once per turn.
   de:
   es:
   fr:
