--- a/data/cards/74725513.yaml
+++ b/data/cards/74725513.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Qebehsenuef, Aegis of Horus" once per turn this way. If another card(s) you control leaves the field by an opponent's card effect while you control this monster: You can activate this effect; this turn, your opponent's monsters cannot target "Horus" monsters for attacks, also your opponent cannot target "Horus" monsters on the field with card effects. You can only use this effect of "Qebehsenuef, Aegis of Horus" once per turn.
+    If you control "Pharaonic Sarcophagus", you can Special Summon this card (from your GY). You can only Special Summon "Qebehsenuef, Aegis of Horus" once per turn this way. If another card(s) you control leaves the field by an opponent's card effect while you control this monster (except during the Damage Step): You can activate this effect; this turn, your opponent's monsters cannot target "Horus" monsters for attacks, also your opponent cannot target "Horus" monsters on the field with card effects. You can only use this effect of "Qebehsenuef, Aegis of Horus" once per turn.
   de:
   es:
   fr:
