--- a/data/cards/98022050.yaml
+++ b/data/cards/98022050.yaml
@@ -123,6 +123,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.2
     rarities:
     - Super Rare
+  - set_number: 23TP-JP201
+    set_name: Top Prize Pack 2023 Vol.2
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: ETCO-KR037
     set_name: Eternity Code
