--- a/data/cards/yugipedia978658.yaml
+++ b/data/cards/yugipedia978658.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Banish 1 face-up "Visas Starfrost" in your Monster Zone (until the End Phase); Special Summon 1 "Heart" monster with 3000 ATK from your Extra Deck, ignoring its Summoning conditions, but it can only activate its effects once, also banish it face-down during the End Phase. If your opponent Special Summons a monster(s) from the Extra Deck while this card is in your GY: You can add this card to your hand. You can only use each effect of "Loka Samsara" once per turn.
+    Banish 1 face-up "Visas Starfrost" in your Monster Zone (until the End Phase); Special Summon 1 "Heart" monster with 3000 ATK from your Extra Deck, ignoring its Summoning conditions, but it can only activate its effects once, also banish it face-down during the End Phase. If your opponent Special Summons a monster(s) from the Extra Deck while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Loka Samsara" once per turn.
   de:
   es:
   fr:
