--- a/data/cards/yugipedia993017.yaml
+++ b/data/cards/yugipedia993017.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When a Spell/Trap Card, or monster effect, is activated while you control a Machine "T.G." monster: Negate the activation, and if you do, destroy that card. If a Synchro Monster(s) is banished while this card is in your GY: You can Set this card, but banish it when it leaves the field. You can only use 1 "T.G. - Close" effect per turn, and only once that turn.
+    When a Spell/Trap Card, or monster effect, is activated while you control a Machine "T.G." monster: Negate the activation, and if you do, destroy that card. If a Synchro Monster(s) is banished while this card is in your GY (except during the Damage Step): You can Set this card, but banish it when it leaves the field. You can only use 1 "T.G. - Close" effect per turn, and only once that turn.
   de:
   es:
   fr:
