--- a/rush.yaml
+++ b/rush.yaml
@@ -112204,7 +112204,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（地属性／機械族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -112216,7 +112217,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中から１枚を選んで手札に加える。残りのカードを好きな順番で全てデッキの上に戻すか、全て墓地へ送る。
   ko:
   zh-TW:
   zh-CN:
