--- a/data/rush/19271.yaml
+++ b/data/rush/19271.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19271
 name:
   en: Thestalos the Firestorm Monarch
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを攻撃表示でアドバンス召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の手札をランダムに１枚選んで墓地へ送る。この効果でモンスターが墓地へ送られた場合、さらに［そのモンスターのレベル］×１００ダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
