--- a/data/rush/yugipedia991608.yaml
+++ b/data/rush/yugipedia991608.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
