--- a/rush.yaml
+++ b/rush.yaml
@@ -109173,7 +109173,7 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 974974
 ---
-konami_id:
+konami_id: 19271
 name:
   en: Thestalos the Firestorm Monarch
   de:
@@ -109195,7 +109195,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを攻撃表示でアドバンス召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -109207,7 +109208,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の手札をランダムに１枚選んで墓地へ送る。この効果でモンスターが墓地へ送られた場合、さらに［そのモンスターのレベル］×１００ダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
@@ -110701,6 +110703,7 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
