--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4150,6 +4150,18 @@
   ko_rr: Saengsideu
   zh-TW:
   zh-CN:
+- en: Battleguard
+  de: Kampfwache
+  es: Escolta de Batalla
+  fr: des Gardes
+  it: Battagliasorvegliante
+  pt: Guarda de Batalha
+  ja: バーバリアン
+  ja_romaji: Bābarian
+  ko: 바바리안
+  ko_rr: Babarian
+  zh-TW:
+  zh-CN:
 - en: Rikka
   de: Rikka
   es: Rikka
