--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4138,6 +4138,18 @@ Sunseed:
   ko_rr: Saengsideu
   zh-TW:
   zh-CN:
+Battleguard:
+  de: Kampfwache
+  es: Escolta de Batalla
+  fr: des Gardes
+  it: Battagliasorvegliante
+  pt: Guarda de Batalha
+  ja: バーバリアン
+  ja_romaji: Bābarian
+  ko: 바바리안
+  ko_rr: Babarian
+  zh-TW:
+  zh-CN:
 Rikka:
   de: Rikka
   es: Rikka
