--- a/data/cards/67630394.yaml
+++ b/data/cards/67630394.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＦＡ<rt>フルアーマード</rt></ruby>－ダーク・ナイト・ランサー
-  ja_romaji: Furu Āmādo - Dāku Naito Ransā
+  ja_romaji: Furuāmādo - Dāku Naito Ransā
   ko:
   ko_rr:
   zh-TW:
