--- a/data/cards/11234702.yaml
+++ b/data/cards/11234702.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Serpente Elica
   pt: T.G. Serpente Hélice
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> スクリュー・サーペント
-  ja_romaji: Tekkujīnasu Sukuryū Sāpento
+  ja_romaji: Tekku Jīnasu Sukuryū Sāpento
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 스크류 서펜트
   ko_rr: Tekeujineoseu Seukeuryo Seopenteu
   zh-TW:
