--- a/data/cards/24943456.yaml
+++ b/data/cards/24943456.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Gladiatore del Potere
   pt: T.G. Gladiador Poderoso
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> パワー・グラディエイター
-  ja_romaji: Tekkujīnasu Pawā Guradieitā
+  ja_romaji: Tekku Jīnasu Pawā Guradieitā
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 파워 글래디에이터
   ko_rr:
   zh-TW:
