--- a/data/cards/37300735.yaml
+++ b/data/cards/37300735.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Falco Jet
   pt: T.G. Jato Falcão
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> ジェット・ファルコン
-  ja_romaji: Tekkujīnasu Jetto Farukon
+  ja_romaji: Tekku Jīnasu Jetto Farukon
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 제트 팔콘
   ko_rr:
   zh-TW:
