--- a/data/cards/48633301.yaml
+++ b/data/cards/48633301.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Raptor Impulso
   pt: T.G. Raptor Dínamo
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> ブースター・ラプトル
-  ja_romaji: Tekkujīnasu Būsutā Raputoru
+  ja_romaji: Tekku Jīnasu Būsutā Raputoru
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 부스터 랩토르
   ko_rr: Tekeujineoseu Buseuteo Raeptoreu
   zh-TW:
