--- a/data/cards/50750868.yaml
+++ b/data/cards/50750868.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Lanciatore Tridente
   pt: T.G. Lançador de Tridente
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> トライデント・ランチャー
-  ja_romaji: Tekkujīnasu Toraidento Ranchā
+  ja_romaji: Tekku Jīnasu Toraidento Ranchā
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 트라이든트 런처
   ko_rr: Tekeujineoseu Teuraideunteu Reoncheo
   zh-TW:
