--- a/data/cards/51447164.yaml
+++ b/data/cards/51447164.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Fuciliere Lama
   pt: T.G. Destruidor Laminado
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> ブレード・ガンナー
-  ja_romaji: Tekkujīnasu Burēdo Gannā
+  ja_romaji: Tekku Jīnasu Burēdo Gannā
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 브레이드 건맨
   ko_rr:
   zh-TW:
