--- a/data/cards/63180841.yaml
+++ b/data/cards/63180841.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Stella Cadente T.G. EX
   pt: Dragão da Explosão Estelar T.G. EX
   ja: シューティング・スター・ドラゴン・<ruby>ＴＧ<rt>テックジーナス</rt></ruby>－<ruby>ＥＸ<rt>エクスパンション</rt></ruby>
-  ja_romaji: Shūtingu Sutā Doragon Tekkujīnasu - Ekusupanshon
+  ja_romaji: Shūtingu Sutā Doragon Tekku Jīnasu - Ekusupanshon
   ko: 슈팅 스타 드래곤 <ruby>TG<rt>테크지너스</rt></ruby>－<ruby>EX<rt>익스팬션</rt></ruby>
   ko_rr: Syuting Seuta Deuraegon Tekeujineoseu - Ikseupaensyeon
   zh-TW:
