--- a/data/cards/64898834.yaml
+++ b/data/cards/64898834.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Drago Catapulta
   pt: T.G. Dragão Catapulta
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> カタパルト・ドラゴン
-  ja_romaji: Tekkujīnasu Kataparuto Doragon
+  ja_romaji: Tekku Jīnasu Kataparuto Doragon
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 중강갑 드래곤
   ko_rr:
   zh-TW:
