--- a/data/cards/64910482.yaml
+++ b/data/cards/64910482.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Cyber Mago
   pt: T.G. Mago Cibernético
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> サイバー・マジシャン
-  ja_romaji: Tekkujīnasu Saibā Majishan
+  ja_romaji: Tekku Jīnasu Saibā Majishan
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 사이버 매지션
   ko_rr: Tekeujineoseu Saibeo Maejisyeon
   zh-TW:
