--- a/data/cards/74627016.yaml
+++ b/data/cards/74627016.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Larva Carrarmato
   pt: T.G. Larva Tanque
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> タンク・ラーヴァ
-  ja_romaji: Tekkujīnasu Tanku Rāva
+  ja_romaji: Tekku Jīnasu Tanku Rāva
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 탱크 러바
   ko_rr: Tekeujineoseu Taengkeu Leoba
   zh-TW:
