--- a/data/cards/99937842.yaml
+++ b/data/cards/99937842.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Guardiano Stellare
   pt: T.G. Guardião Estelar
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> スター・ガーディアン
-  ja_romaji: Tekkujīnasu Sutā Gādian
+  ja_romaji: Tekku Jīnasu Sutā Gādian
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 스타 가디언
   ko_rr: Tekeujineoseu Seuta Gadieon
   zh-TW:
