--- a/data/cards/94350039.yaml
+++ b/data/cards/94350039.yaml
@@ -8,7 +8,7 @@ name:
   it: T.G. Zombie Ingranaggio
   pt: T.G. Zumbi Mecanismo
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> ギア・ゾンビ
-  ja_romaji: Tekkujīnasu Gia Zonbi
+  ja_romaji: Tekku Jīnasu Gia Zonbi
   ko: <ruby>TG<rt>테크지너스</rt></ruby> 기어 좀비
   ko_rr: Tekeujineoseu Gieo Jombi
   zh-TW:
