--- a/data/rush/yugipedia994922.yaml
+++ b/data/rush/yugipedia994922.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（機械族）または自分フィールドの表側表示モンスター（機械族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「フュージョン」または「パワー・ボンド」１枚を選んで手札に加える。その後、自分の墓地の「ジョインテック・スパイクセンチビード」１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
