--- a/data/rush/yugipedia994924.yaml
+++ b/data/rush/yugipedia994924.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（レベル５以上／地属性／機械族）１体を持ち主の手札に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのモンスター１体を選んで破壊する。このターン、自分はモンスター（機械族以外）の効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
