--- a/data/rush/yugipedia994926.yaml
+++ b/data/rush/yugipedia994926.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで、［相手フィールドのモンスターの数］×７００ダウンする。その後、自分は［相手フィールドのモンスターの数］×７００ＬＰ回復する。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・スパイクセンチピード」＋「ジョインテック・アークスコーピオ」
   ko:
   zh-TW:
   zh-CN:
