--- a/data/rush/yugipedia994928.yaml
+++ b/data/rush/yugipedia994928.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「ジョインテック・アークスコーピオ」「ジョインテック・スパイクセンチピード」「ジョインテック・レックス」の中から１体を選び、自分フィールドに表側守備表示で特殊召喚する。このターン、自分はモンスター（機械族以外）の効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
