--- a/data/rush/yugipedia994930.yaml
+++ b/data/rush/yugipedia994930.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「メガジョインテック・フォートレックス［Ｌ］」「メガジョインテック・フォートレックス［Ｒ］」と揃えてマキシマム召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    マキシマムモード
   ko:
   zh-TW:
   zh-CN:
@@ -46,7 +48,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのレベルは６上がる。自分の墓地にモンスター（レベル７以上／機械族）がいる場合、さらにこのカードは効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
