--- a/data/rush/yugipedia994934.yaml
+++ b/data/rush/yugipedia994934.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いはそれぞれ相手の墓地のモンスター３体を選び、持ち主のデッキに戻す。このカードがマキシマムモードの場合、さらにこのカードの攻撃力はターン終了時まで、［この効果で戻したモンスター（地属性／機械族）のレベルの合計］×１００アップする。
   ko:
   zh-TW:
   zh-CN:
