--- a/data/rush/17718.yaml
+++ b/data/rush/17718.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Super Rare
+  - set_number: RD/S23P-JP005
+    set_name: Tournament Battle August 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/MRP1-KR092
     set_name: Megaroad Pack
